# orchay

./: .editorconfig  .gitignore  .prettierignore  CLAUDE.md  README.md  idea-note.md  idea.md  mud_game_benchmarking.md  package-lock.json  package.json
orchay/: .coverage  README.md  launcher.py  orchay.spec  pyproject.toml  wezterm-orchay-windows.lua  wezterm-orchay.lua
orchay/src/orchay/: __init__.py  __main__.py  cli.py  command.py  launcher.py  main.py  recovery.py  scheduler.py  wbs_parser.py  worker.py
orchay/src/orchay/application/: __init__.py  dispatch_service.py  task_service.py  worker_service.py
orchay/src/orchay/data/: __init__.py  wezterm-orchay-windows.lua
orchay/src/orchay/domain/: __init__.py  constants.py
orchay/tests/: __init__.py  conftest.py  test_cli.py  test_command.py  test_config.py  test_history.py  test_integration.py  test_launcher.py  test_main.py  test_recovery.py  test_scheduler.py  test_tui.py  test_wbs_parser.py  test_wezterm.py  test_worker.py
orchay/tests/application/: test_dispatch_service.py  test_task_service.py  test_worker_service.py
orchay/tests/domain/: __init__.py  test_task_filter.py  test_workflow_engine.py
orchay/tests/fixtures/: corrupted_wbs.md  corrupted_wbs.yaml  full_attributes_wbs.md  full_attributes_wbs.yaml  valid_wbs.md  valid_wbs.yaml
orchay/tests/infrastructure/: __init__.py  test_state_store.py  test_wezterm_adapter.py
orchay/tests/test_ui/: __init__.py  test_app.py
orchay/tests/utils/: test_active_tasks.py  test_platform.py  test_process.py
orchay_web/src-tauri/: Cargo.toml  tauri.conf.json
orchay_web/src-tauri/capabilities/: default.json
orchay_web/src-tauri/src/: lib.rs  main.rs  watcher.rs
(+983 files in other folders)
