[package]
name = "orchay_web"
version = "0.1.0"
description = "Orchay Web - AI 기반 프로젝트 관리 도구"
authors = ["you"]
edition = "2021"

[lib]
name = "orchay_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
chrono = "0.4"
